# Quad-AutoLogin

./: CMakeLists.txt  README.md
src/: AutoLogin.cpp  AutoLogin.h  AutoLogin.xml  CMakeLists.txt  DBManager.cpp  DBManager.h  main.cpp
